--- a/football/app/views/fragments/frontTableBlock.scala.html
+++ b/football/app/views/fragments/frontTableBlock.scala.html
@@ -30,5 +30,5 @@
         }
     </table>
 
-    <a href='@{table.competition.url + "/table"}' data-link-name='full table' class="cta-small cta-small-border type-8">View full table <i class="i i-sport-arrow-small"></i></a>
+    <a href='@{table.competition.url + "/table"}' data-link-name='full table' class="cta-small cta-small-border type-8">View full table</a>
 </li>
