--- a/football/app/views/fragments/tablesBody.scala.html
+++ b/football/app/views/fragments/tablesBody.scala.html
@@ -53,10 +53,9 @@
         </table>
 
         @if(!model.singleCompetition) {
-            <a href='@{table.competition.url + "/table"}' data-link-name='full table' class="table-football__cta">
+            <a href='@{table.competition.url + "/table"}' data-link-name='full table' class="cta table-football__cta">
                 <span class="cta__text">View full @table.competition.fullName table</span>
                 <span class="cta__btn cta__btn--right">
-                    <span class="cta__label h"></span>
                     <i class="i i-arrow-blue-down cta__icn--right"></i>
                 </span>
             </a>
