More style fixes for competitions page

--- a/common/app/assets/stylesheets/module/football/_filters.scss
+++ b/common/app/assets/stylesheets/module/football/_filters.scss
@@ -29,8 +29,9 @@ a.football-filterbar__link {
 
 .football-filters {
     background: $neutral6;
-    margin: 0 $gutter 0 $gutter !important;
+    margin: 0 $gutter;
     padding: 0 3px;
+    list-style: none;
 }
 
 .football-filters__title {
