--- a/football/app/views/fragments/competitionsBody.scala.html
+++ b/football/app/views/fragments/competitionsBody.scala.html
@@ -2,9 +2,9 @@
 
 @renderFilter(name: String) = {
     @competitions.get(name).map{ filters =>
-        <section class="sections" data-link-name="Football | Competitions | @HtmlFormat.raw(name)">
-            <h1 class="article-zone type-5">@HtmlFormat.raw(name)</h1>
-            <ul class="nav nav--columns nav--top-border-off cf">
+        <section class="sections competitions" data-link-name="Football | Competitions | @HtmlFormat.raw(name)">
+            <h1 class="competitions__title">@HtmlFormat.raw(name)</h1>
+            <ul class="nav nav--columns nav--columns-football nav--top-border-off cf">
                 @filters.map{ competition =>
                     <li class="nav__item">
                         <a href="@competition.url" class="nav__link" data-link-name="@HtmlFormat.raw(competition.name)">
