CTA for front table

--- a/football/app/views/fragments/frontTableBlock.scala.html
+++ b/football/app/views/fragments/frontTableBlock.scala.html
@@ -30,5 +30,11 @@
         }
     </table>
 
-    <a href='@{table.competition.url + "/table"}' data-link-name='full table' class="cta-small cta-small-border type-8">View full table</a>
+    <a href='@{table.competition.url + "/table"}' data-link-name='full table' class="cta table-football__cta">
+        <span class="cta__text">View full table</span>
+        <span class="cta__btn cta__btn--right">
+            <i class="i i-arrow-blue-down cta__icn--right"></i>
+        </span>
+    </a>
+
 </li>
