--- a/football/app/views/fragments/filterBar.scala.html
+++ b/football/app/views/fragments/filterBar.scala.html
@@ -1,7 +1,7 @@
 @(title: String)
 <div class="football-filterbar section-head--blue js-collapsible" data-toggle-panel="js-football-league-list">
     <h1 class="football-filterbar__title">
-        <a class="football-filterbar__link control" href="#" data-link-name="Football | @title | filter">
+        <a class="football-filterbar__link" href="#" data-link-name="Football | @title | filter">
             @title
         </a>
     </h1>
