clean video poster image in latest component

--- a/event/app/views/fragments/latest.scala.html
+++ b/event/app/views/fragments/latest.scala.html
@@ -29,6 +29,7 @@
                             TweetCleaner,
                             WitnessCleaner,
                             Summary(if(a.isLive){ 1 } else { paras})
+                            VideoPosterCleaner(article.videoAssets)
                         )
                     </div>
                     <p>
