--- a/event/app/views/fragments/latest.scala.html
+++ b/event/app/views/fragments/latest.scala.html
@@ -28,8 +28,8 @@
                             BlockNumberCleaner,
                             TweetCleaner,
                             WitnessCleaner,
-                            Summary(if(a.isLive){ 1 } else { paras})
-                            VideoPosterCleaner(article.videoAssets)
+                            Summary(if(a.isLive){ 1 } else { paras}),
+                            VideoPosterCleaner(a.videoAssets)
                         )
                     </div>
                     <p>
