--- a/football/app/views/fragments/teamlistBody.scala.html
+++ b/football/app/views/fragments/teamlistBody.scala.html
@@ -21,7 +21,7 @@
     <a data-link-name="article section" href="/football">Football</a>
 </h2>
 
-<h1 class="page-head">@pageModel.page.webTitle</h1>
+<h1 class="page-head page-head--noborder">@pageModel.page.webTitle</h1>
 
 
 @comps.map{ comp =>
