--- a/common/app/assets/stylesheets/module/football/_tables.scss
+++ b/common/app/assets/stylesheets/module/football/_tables.scss
@@ -1,8 +1,3 @@
-.football-table-container a.cta {
-    background-color: #f4f4ee;
-    color: #064951;
-}
-
 .table-football {
     background-color: $neutral6;
     margin-bottom: $baseline*3;
@@ -110,7 +105,7 @@
 .table-football-body:hover tr.highlight,
 .table-football-body tr.highlight:nth-child(even),
 .table-football-body:hover tr.highlight:nth-child(even) {
-    background-color: #FAB036 !important;
+    background-color: $main18;
     border-bottom: none;
     margin-top: -1px;
 }
@@ -122,6 +117,10 @@
     background-color: $neutral6;
     overflow: hidden;
     border-top: 0;
+}
+
+.table-football--front__cta {
+    margin-bottom: 24px;
 }
 
 
