--- a/common/app/views/fragments/footballNav.scala.html
+++ b/common/app/views/fragments/footballNav.scala.html
@@ -1,9 +1,10 @@
 @(urlBase: String, competitionName: Option[String] = None, competitionUrl: Option[String] = None)(implicit request: RequestHeader)
 @import common._
 
-<h3 class="article-zone">
+<h3 class="page-head page-head--sub">
     <a href="@competitionUrl.getOrElse("/football")" data-link-name="football index">@competitionName.getOrElse("Football")</a>
 </h3>
+
 <div class="box-indent">
     <div class="sections cf football-nav" data-link-name="football bottom nav">
         <ul class="nav nav--columns nav--top-border-off sections cf">
