--- a/football/app/views/fragments/competitionsBody.scala.html
+++ b/football/app/views/fragments/competitionsBody.scala.html
@@ -4,7 +4,7 @@
     @competitions.get(name).map{ filters =>
         <section class="sections competitions" data-link-name="Football | Competitions | @HtmlFormat.raw(name)">
             <h1 class="competitions__title">@HtmlFormat.raw(name)</h1>
-            <ul class="nav nav--columns nav--columns-football nav--top-border-off cf">
+            <ul class="nav nav--columns nav--columns-football cf">
                 @filters.map{ competition =>
                     <li class="nav__item">
                         <a href="@competition.url" class="nav__link" data-link-name="@HtmlFormat.raw(competition.name)">
@@ -21,7 +21,7 @@
     <a data-link-name="article section" href="/football">Football</a>
 </h2>
 
-<h1 class="page-head">@page.webTitle</h1>
+<h1 class="page-head page-head--noborder">@page.webTitle</h1>
 
 @competitionList.map{ comp =>
     @renderFilter(comp)
