--- a/common/app/views/fragments/footballNav.scala.html
+++ b/common/app/views/fragments/footballNav.scala.html
@@ -7,7 +7,7 @@
 
 <div class="box-indent">
     <div class="sections cf football-nav" data-link-name="football bottom nav">
-        <ul class="nav nav--columns nav--top-border-off sections cf">
+        <ul class="nav nav--columns sections cf">
             @defining({
                 var linkList = List(
                     Link("/football/competitions", "leagues and competitions", "Leagues & competitions")
