--- a/football/app/views/fragments/teamlistBody.scala.html
+++ b/football/app/views/fragments/teamlistBody.scala.html
@@ -4,7 +4,7 @@
     <section class="sections team-list" data-link-name="Football | Teams | @HtmlFormat.raw(comp.fullName)" id="@comp.url.split("/")(2)">
         <h1 class="team-list__title">@comp.fullName</h1>
 
-        <ul class="nav nav--columns nav--top-border-off cf">
+        <ul class="nav nav--columns nav--columns-football cf">
             @comp.teams.map{ team =>
             <li class="nav__item" data-team-id="@team.id">
                 @TeamUrl(team).map{ url => <a href="@url" class="nav__link" data-link-name="@team.name">
