Added higher breakpoints

--- a/common/app/assets/stylesheets/layout/_layout.scss
+++ b/common/app/assets/stylesheets/layout/_layout.scss
@@ -5,8 +5,8 @@
 #preloads {
   position: relative;
   clear: both;
-  max-width: 64em;
-  max-width: 102.4rem;
+  //max-width: 64em;
+  //max-width: 102.4rem;
   margin: 0 auto;
 }
 
