Fixed gallery control styling

--- a/common/app/assets/stylesheets/base/_type.scss
+++ b/common/app/assets/stylesheets/base/_type.scss
@@ -56,7 +56,7 @@ h1, h2, h3, h4, h5, h6 {
 //Default type elements
 p {
     color: #545454;
-    margin: 0 0 $baseline*2 0;
+    margin: 0 0 0 0;
 }
 
 h1 {
